--- a/findly-builder/src/app/components/manage-intent/manage-intent.component.scss
+++ b/findly-builder/src/app/components/manage-intent/manage-intent.component.scss
@@ -441,6 +441,10 @@
             margin: 0;
             top: 6px;
             left: 10px;
+            span{
+                font-weight: 400 !important;
+                color: #9B9B9B !important;
+            }
         }
     }
     .mat-form-field-subscript-wrapper{
