--- a/findly-builder/src/app/scss/variables/variables.scss
+++ b/findly-builder/src/app/scss/variables/variables.scss
@@ -335,6 +335,7 @@ input::placeholder{
 		box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.15);
 		max-width: 300px;
 		margin: 10px 0 0 !important;
+		min-height: auto !important;
 		// padding-top: 15px;
 	   .accountsSwitchDiv{
 			position: relative;
